@@ -1,4 +1,4 @@
-<?php $this->title = Yii::t('UserModule.user', 'Permission Denied'); ?>
+<?php $this->title = Yum::t('Permission Denied'); ?>
 <div class="hint">
 	<p> <?php echo Yum::t('You are not allowed to view this profile.'); ?> </p>
   <p> <?php echo CHtml::link(Yum::t('Back to your profile'), array('user/profile')); ?> </p>
